Changed filter buttons to images

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -12,8 +12,12 @@ code {
     monospace;
 }
 
-.element-filter, .weapon-filter {
-    margin-left: 10px;
+.filter-off {
+    opacity: 0.2;
+}
+
+.filter-on {
+    opacity: 1;
 }
 
 .char-container {
