--- a/app/src/index.css
+++ b/app/src/index.css
@@ -21,6 +21,10 @@ code {
     grid-template-columns: auto auto;
 }
 
+.filter {
+    display: inline-flex;
+}
+
 .filter-off, .filter-on {
     width: 64px;
     margin: 5px;
@@ -41,6 +45,22 @@ code {
 .filter-on {
     background-color: dodgerblue;
     opacity: 1;
+}
+
+.filter-off + .material-tooltip, .filter-on + .material-tooltip {
+    visibility: hidden;
+    position: absolute;
+    text-align: center;
+    border: 2px solid gray;
+    border-radius: 5px;
+    background-color: #bbb;
+    padding: 5px;
+    margin-top: -30px;
+    z-index: 1;
+}
+
+.filter-off:hover + .material-tooltip, .filter-on:hover + .material-tooltip {
+    visibility: visible;
 }
 
 .char-display {
